monticore-generator/src/test/resources/cocos/valid/ProdAndOverriddenProdUseSameAttrNameForDiffNTs_super.mc4
/* (c) https://github.com/MontiCore/monticore */
package cocos.valid;

grammar ProdAndOverriddenProdUseSameAttrNameForDiffNTs_super{

  A;

  Prod1 = x:A;

  Prod2 = c:B;

  Prod3 = "b";

  State =
  "state" Name
  ( ("{" (State)* "}") | ";") ;
}
