monticore-generator/src/test/resources/cocos/invalid/A4017/A4017.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4017;

grammar A4017 {

  token A = B;

  B;
}
